--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,14 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h1>Вариант 6</h1>
-    <p>Push</p>
+<h3>Hello</h3>
+<p>Щось новеньке</p>
+<ul>
+    <li>Пунтик1</li>
+    <li>Пунтик2</li>
+    <li>Пунтик3</li>
+    <li>Пунтик4</li>
+    <li>Пунтик5</li>
+</ul>
 </body>
 </html>
