--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,13 @@
 </head>
 <body>
 <h3>Hello</h3>
-<p>Щось новеньке</p>
+<p>Ще новіше</p>
 <ul>
     <li>Пунтик1</li>
     <li>Пунтик2</li>
+    <li>Пунтик3</li>
+    <li>Пунтик4</li>
+    <li>Пунтик5</li>
     <li>Пунтик3</li>
     <li>Пунтик4</li>
     <li>Пунтик5</li>
